--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "dependencies": {
     "apexcharts": "^3.41.0",
+    "axios": "^1.6.2",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "flowbite": "^1.8.0",
     "flowbite-react": "^0.5.0",
     "react-apexcharts": "^1.4.1",
