add filter application by date

--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
-    "flowbite": "^1.8.0",
+    "flowbite": "^2.2.0",
     "flowbite-react": "^0.5.0",
     "react-apexcharts": "^1.4.1",
+    "react-datepicker": "^4.23.0",
     "react-icons": "^4.10.1",
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.0",
     "svgmap": "^2.10.1",
+    "tailwind-datepicker-react": "^1.4.3",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
