--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "flowbite-react": "^0.5.0",
     "react-apexcharts": "^1.4.1",
     "react-datepicker": "^4.23.0",
+    "react-dropdown": "^1.11.0",
     "react-icons": "^4.10.1",
+    "react-select": "^5.8.0",
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.0",
     "svgmap": "^2.10.1",
