add firebase config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,11 @@
     "types": ["vite/client"]
   },
   "exclude": ["node_modules"],
-  "include": ["**/*.cjs", "**/*.mjs", "**/*.ts", "**/*.tsx"]
+  "include": [
+    "**/*.cjs",
+    "**/*.mjs",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/config/firebase.js"
+  ]
 }
