--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.5.0",
     "react-apexcharts": "^1.4.1",
