--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
     "**/*.mjs",
     "**/*.ts",
     "**/*.tsx",
-    "src/config/firebase.js"
+    "src/config/firebase.js",
+    "src/service/firebaseService.js"
   ]
 }
